--- a/src/components/Posts/Post.css
+++ b/src/components/Posts/Post.css
@@ -1,7 +1,17 @@
-.post-container {
-	display: flex;
-	flex-direction: column;
-	margin: 1rem 5rem 8rem 5rem;
+.post {
+	margin: 3rem 5rem;
+	border: 1px solid var(--outline);
+	border-radius: 10px;
+	padding: 1rem 0rem 0rem 1rem;
+	box-shadow: 1px 2px 5px lightgray;
+	background-color: var(--offWhite);
+}
+
+.post > div {
+	min-width: 0;
+	padding-left: 1.5rem;
+	margin: 0;
+	border: 0;
 }
 
 .filter-bar {
@@ -27,7 +37,6 @@
 }
 
 .post-title {
-	color: purple;
 	font-size: 1.25em;
 }
 
@@ -59,4 +68,8 @@
 	background-color: red;
 	border: 1px solid black;
 	border-radius: 5px;
+}
+
+.delete-btn {
+	margin-bottom: 10px;
 }
